hphp/test/zend/good/zend/bug31341.php
<?php
$a = array(
	"$     \{    ",
	"      \{   $",
	"      \{$   ",
	"      $\{   ",
	"      \$\{  ",
	"      \{\$  ",
	"\$    \{    ",
	"      \{  \$",
	"%     \{    ");

foreach ($a as $v) {
	echo("'$v'\n");
}
?>