hphp/test/zend/bad/ext/spl/tests/SplFixedArray_offsetSet_invalid_parameter.php
<?php
$array = new SplFixedArray(5);
$a = $array->offsetSet();
if(is_null($a)) {
	echo 'PASS';
}
?>